--- a/juhewu-openfeign-spring-cloud-simple/pom.xml
+++ b/juhewu-openfeign-spring-cloud-simple/pom.xml
@@ -26,13 +26,20 @@
         <module>juhewu-openfeign-simple-provider</module>
     </modules>
     <dependencies>
+        <!--spring-boot-starter-web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--nacos-discovery-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
