fix: deploy 忽略 juhewu-openfeign-spring-cloud-simple

--- a/juhewu-openfeign-spring-cloud-simple/pom.xml
+++ b/juhewu-openfeign-spring-cloud-simple/pom.xml
@@ -19,6 +19,8 @@
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <!--spring-cloud-alibaba-->
         <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
+        <!--不部署此模块-->
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <modules>
